# TGB-IA

./: .replit  Pasted--extends-base-html-block-content-div-class-container-py-4-h2-class-mb-4-Co-1734665990080.txt  Pasted--extends-base-html-block-content-div-class-row-div-class-col-md-8--1734325924807.txt  Pasted--extends-base-html-block-content-div-class-row-div-class-col-md-8--1734325970119.txt  Pasted--extends-base-html-block-title-Dashboard-de-Trading-endblock-block-content--1734664539641.txt  Pasted--mi-plataforma-app-Directorio-principal-de-la-aplicaci-n--1734194632228.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-admin-subscrip-1734281500729.txt  Pasted-ProgrammingError-sqlalchemy-exc-ProgrammingError-psycopg2-errors-UndefinedColumn-column-exchange-1734627084182.txt  Pasted-ProgrammingError-sqlalchemy-exc-ProgrammingError-psycopg2-errors-UndefinedColumn-column-exchange-1734664229249.txt  Pasted-S-es-posible-estructurar-tu-arquitectura-de-forma-que-cuando-se-reciba-una-alerta-desde-TradingVi-1734574310371.txt  Pasted-from-flask-import-Flask-request-jsonify-import-requests-import-json-import-logging-import-os-from--1734495975156.txt  pyproject.toml  run.py
app/: __init__.py  config.py  extensions.py
app/api/: exchanges.py
app/auth/: decorators.py
app/billing/: __init__.py  models.py  routes.py  services.py  utils.py
docs/: Pasted--mi-plataforma-app-Directorio-principal-de-la-aplicaci-n--1734194632228.txt  README.md  admin_guide.md  api.md  development.md  installation.md  user_guide.md
migrations/: env.py
(+95 files in other folders)
