[project]
name = "repl-nix-new-repl-1"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "psycopg2-binary>=2.9.10",
    "python-binance>=1.0.25",
    "pandas>=2.2.3",
    "flask-mail>=0.10.0",
    "flask-migrate>=4.0.7",
    "oandapyv20>=0.7.2",
    "alpaca-trade-api>=3.2.0",
]
